--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ic4fNg</title>
+  <title>Sergey Golitsynskiy's website</title>
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
   <app-root></app-root>
