Add google analytics (see note).
gtag for now; later replace with analytics.js + autotrack.

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,14 @@
   <title></title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-35980048-6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-35980048-6');
+  </script>
 </head>
 <body>
   <app-root></app-root>
